<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.compassouol.aplicacao.detalhesDoEvento.view.DetalhesDoEventoViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/border_layout_eventos">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:backgroundTint="@color/corSecundaria"
                        android:background="@color/corSecundaria">

                        <ImageView
                            android:id="@+id/imageViewImagemDoEvento"
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            android:layout_gravity="center|top"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:id="@+id/textViewTituloDoEvento"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:padding="2dp"
                            android:textAlignment="center"
                            android:textColor="@color/corTextoEventos"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_margin="2dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/data"
                            android:textColor="@color/preto"
                            android:textSize="14sp"
                            android:layout_margin="5dp"/>

                        <TextView
                            android:id="@+id/textViewDataDoEvento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/preto"
                            android:gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/valor"
                            android:textColor="@color/preto"
                            android:textSize="14sp"
                            android:layout_margin="5dp"/>

                        <TextView
                            android:id="@+id/textViewValorDoEVento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textColor="@color/preto"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/descricao_do_evento"
                            android:textColor="@color/preto"
                            android:textSize="14sp"
                            android:layout_margin="5dp"/>

                        <TextView
                            android:id="@+id/textViewDescricaoDoEVento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textColor="@color/preto"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCheckIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/fazer_check_in"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/botao_redondo"/>

                <Button
                    android:id="@+id/btnCompartilhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/compartilhar"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/botao_redondo"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>